Remove JVM warnings about dynamic agents and CDS